--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -69,6 +69,9 @@ markdown_extensions:
   - smarty
   - admonition
   - tables
+  - pymdownx.superfences
+  - pymdownx.tabbed:
+      alternate_style: true
 plugins:
   - search
   - placeholder
