--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,6 +7,7 @@ edit_uri: edit/main/docs/
 nav:
   - Cloud:
       - Cloud: index.md
+      - "Cloud 2": cloud-v2.md
   - cloud-core:
       - cloud-core: core/index.md
   - cloud-annotations:
