feat(discord): document cloud-kord

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -22,6 +22,7 @@ nav:
       - cloud-javacord: discord/javacord.md
       - cloud-jda: discord/jda.md
       - cloud-jda5: discord/jda5.md
+      - cloud-kord: discord/kord.md
   - cloud-minecraft:
       - cloud-minecraft: minecraft/index.md
       - cloud-brigadier: minecraft/brigadier.md
