--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,8 @@ edit_uri: edit/main/docs/
 nav:
   - Cloud:
       - Cloud: index.md
-      - "Cloud 2": cloud-v2.md
+      - "Cloud v2": cloud-v2.md
+      - "Cloud v1 docs": https://github.com/Incendo/cloud/tree/1.9.0-dev/docs
   - cloud-core:
       - cloud-core: core/index.md
   - cloud-annotations:
