--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -105,3 +105,27 @@ extra:
       as to measure the effectiveness of our documentation and whether users
       find what they're searching for. With your consent, you're helping us to
       make our documentation better.
+  analytics:
+    provider: google
+    property: G-4R7HH5TMGT
+    feedback:
+      title: Was this page helpful?
+      ratings:
+        - icon: material/emoticon-happy-outline
+          name: This page was helpful
+          data: 1
+          note: >-
+            Thanks for your feedback!
+        - icon: material/emoticon-sad-outline
+          name: This page could be improved
+          data: 0
+          note: >-
+            Thanks for your feedback! Help us improve this page by
+            using our <a href="..." target="_blank" rel="noopener">feedback form</a>.
+  generator: false
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/incendo
+copyright: >
+  Copyright &copy; 2024 Incendo –
+  <a href="#__consent">Change cookie settings</a>
