--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -64,7 +64,12 @@ theme:
     - content.code.copy
     - content.code.annotate
     - content.tabs.link
+    - content.tooltips
   palette:
+    - media: "(prefers-color-scheme)"
+      toggle:
+        icon: material/brightness-auto
+        name: Switch to light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
       primary: pink
@@ -78,7 +83,7 @@ theme:
       accent: pink
       toggle:
         icon: material/brightness-4
-        name: Switch to light mode
+        name: Switch to system preference
   favicon: assets/images/favicon.png
   logo: assets/images/favicon.png
 markdown_extensions:
@@ -90,6 +95,12 @@ markdown_extensions:
   - pymdownx.superfences
   - pymdownx.tabbed:
       alternate_style: true
+      slugify: !!python/object/apply:pymdownx.slugs.slugify
+        kwds:
+          case: lower
+  - pymdownx.emoji:
+      emoji_index: !!python/name:material.extensions.emoji.twemoji
+      emoji_generator: !!python/name:material.extensions.emoji.to_svg
   - attr_list
   - md_in_html
 plugins:
@@ -97,6 +108,9 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: false
       fallback_to_build_date: true
+  - git-committers:
+      repository: incendo/cloud-docs
+      branch: main
 extra:
   consent:
     title: Cookie consent
