--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -108,9 +108,9 @@ plugins:
   - git-revision-date-localized:
       enable_creation_date: false
       fallback_to_build_date: true
-  - git-committers:
-      repository: incendo/cloud-docs
-      branch: main
+#  - git-committers:
+#      repository: incendo/cloud-docs
+#      branch: main
 extra:
   consent:
     title: Cookie consent
