--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -141,6 +141,8 @@ extra:
   social:
     - icon: fontawesome/brands/github
       link: https://github.com/incendo
+    - icon: fontawesome/brands/discord
+      link: https://discord.gg/aykZu32
 copyright: >
   Copyright &copy; 2024 Incendo –
   <a href="#__consent">Change cookie settings</a>
