--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,47 +7,48 @@ edit_uri: edit/main/docs/
 nav:
   - Cloud:
       - Cloud: index.md
-      - "Cloud v2": cloud-v2.md
-      - "Cloud v1 docs ⮺": https://github.com/Incendo/cloud/tree/1.9.0-dev/docs
-  - cloud-core:
-      - cloud-core: core/index.md
-  - cloud-annotations:
-      - cloud-annotations: annotations/index.md
-  - cloud-kotlin:
-      - cloud-kotlin: kotlin/index.md
-      - annotations: kotlin/annotations.md
-      - coroutines: kotlin/coroutines.md
-      - extensions: kotlin/extensions.md
-  - cloud-discord:
-      - cloud-discord: discord/index.md
-      - cloud-discord4j: discord/discord4j.md
-      - "cloud-javacord ⮺": https://github.com/Incendo/cloud-discord/tree/master/cloud-javacord
-      - "cloud-jda ⮺": https://github.com/Incendo/cloud-discord/tree/master/cloud-jda
-      - cloud-jda5: discord/jda5.md
-      - cloud-kord: discord/kord.md
-  - cloud-minecraft:
-      - cloud-minecraft: minecraft/index.md
-      - cloud-brigadier: minecraft/brigadier.md
-      - cloud-minecraft-extras: minecraft/minecraft-extras.md
-      - cloud-bukkit: minecraft/bukkit.md
-      - cloud-paper: minecraft/paper.md
-      - cloud-velocity: minecraft/velocity.md
-      - cloud-bungee: minecraft/bungee.md
-      - cloud-cloudburst: minecraft/cloudburst.md
-      - cloud-sponge: minecraft/sponge.md
-  - cloud-minecraft-modded:
-      - cloud-minecraft-modded: minecraft/modded/index.md
-      - cloud-fabric: minecraft/modded/fabric.md
-      - cloud-neoforge: minecraft/modded/neoforge.md
-  - cloud-spring:
-      - cloud-spring: spring/index.md
-  - cloud-processors:
-      - cloud-processors: processors/index.md
-      - confirmation: processors/confirmation.md
-      - cooldown: processors/cooldown.md
-      - requirements: processors/requirements.md
-  - Other:
-      - cloud-irc: other/irc.md
+      - Changelog: cloud-v2.md
+      - Core: core/index.md
+      - Internationalization: internationalization/index.md
+  - Annotations:
+      - Annotations: annotations/index.md
+  - Kotlin:
+      - Kotlin: kotlin/index.md
+      - Annotations: kotlin/annotations.md
+      - Coroutines: kotlin/coroutines.md
+      - Extensions: kotlin/extensions.md
+  - Discord:
+      - Discord: discord/index.md
+      - Discord4J: discord/discord4j.md
+      - "Javacord ⮺": https://github.com/Incendo/cloud-discord/tree/master/cloud-javacord
+      - "JDA ⮺": https://github.com/Incendo/cloud-discord/tree/master/cloud-jda
+      - JDA5: discord/jda5.md
+      - Kord: discord/kord.md
+  - Minecraft:
+      - Minecraft: minecraft/index.md
+      - Brigadier: minecraft/brigadier.md
+      - "Minecraft Extras": minecraft/minecraft-extras.md
+      - Platforms:
+          - Bukkit: minecraft/bukkit.md
+          - Paper: minecraft/paper.md
+          - Velocity: minecraft/velocity.md
+          - Bungee: minecraft/bungee.md
+          - Cloudburst: minecraft/cloudburst.md
+          - Sponge: minecraft/sponge.md
+      - Modded Minecraft:
+          - cloud-minecraft-modded: minecraft/modded/index.md
+          - Fabric: minecraft/modded/fabric.md
+          - NeoForge: minecraft/modded/neoforge.md
+  - Spring:
+      - spring: spring/index.md
+  - Processors:
+      - Processors: processors/index.md
+      - Confirmation: processors/confirmation.md
+      - Cooldown: processors/cooldown.md
+      - Requirements: processors/requirements.md
+  # - Misc:
+  #    - irc: other/irc.md
+  - "Legacy Docs ⮺": https://github.com/Incendo/cloud/tree/1.9.0-dev/docs
 theme:
   name: material
   features:
@@ -58,6 +59,7 @@ theme:
     - navigation.indexes
     - navigation.top
     - navigation.footer
+    # - navigation.expand
     - toc.follow
     - search.suggest
     - search.highlight
