--- a/renovate.json
+++ b/renovate.json
@@ -5,8 +5,12 @@
   "labels": ["dependencies"],
   "packageRules": [
     {
-      "matchManagers": ["github-actions"],
-      "groupName": "github actions"
+      "matchManagers": ["github-actions", "gradle-wrapper"],
+      "groupName": "gradle and github actions"
+    },
+    {
+      "matchDepTypes": ["plugin"],
+      "groupName": "gradle and github actions"
     }
   ],
   "semanticCommitType": "build",
