--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 indra = "3.1.3"
 
 cloud = "2.0.0-beta.2"
-cloudMinecraft = "2.0.0-SNAPSHOT"
+cloudMinecraft = "2.0.0-beta.2"
 
 [plugins]
 indra = { id = "net.kyori.indra", version.ref = "indra" }
