--- a/versions.yml
+++ b/versions.yml
@@ -7,6 +7,9 @@ kord: 1.0.0-beta.2
 # Minecraft
 paper: 2.0.0-beta.2
 velocity: 2.0.0-beta.2
+bungee: 2.0.0-beta.2
+cloudburst: 2.0.0-beta.2
 modded: 2.0.0-beta.2
+minecraft-extras: 2.0.0-beta.2
 # Other
 spring: 1.0.0-beta.1
