feat: bump versions to RC

--- a/versions.yml
+++ b/versions.yml
@@ -1,15 +1,15 @@
-core: 2.0.0-beta.2
-processors: 1.0.0-beta.1
+core: 2.0.0-rc.1
+processors: 1.0.0-beta.2
 # Discord
 discord4j: 1.0.0-beta.2
 jda5: 1.0.0-beta.2
 kord: 1.0.0-beta.2
 # Minecraft
-paper: 2.0.0-beta.2
-velocity: 2.0.0-beta.2
-bungee: 2.0.0-beta.2
-cloudburst: 2.0.0-beta.2
-modded: 2.0.0-beta.2
-minecraft-extras: 2.0.0-beta.2
+paper: 2.0.0-beta.7
+velocity: 2.0.0-beta.7
+bungee: 2.0.0-beta.7
+cloudburst: 2.0.0-beta.7
+modded: 2.0.0-beta.6
+minecraft-extras: 2.0.0-beta.7
 # Other
 spring: 1.0.0-beta.1
