--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 indra = "3.1.3"
 
-cloud = "2.0.0-beta.2"
-cloudMinecraft = "2.0.0-beta.2"
+cloud = "2.0.0-rc.2"
+cloudMinecraft = "2.0.0-beta.8"
 
 [plugins]
 indra = { id = "net.kyori.indra", version.ref = "indra" }
