--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -1,12 +1,22 @@
 [versions]
 indra = "3.1.3"
 
-cloud = "2.0.0-beta.2"
-cloudMinecraft = "2.0.0-beta.2"
+cloud = "2.0.0-rc.2"
+cloudMinecraft = "2.0.0-beta.8"
+cloudProcessors = "1.0.0-beta.3"
+
+paper = "1.20.6-R0.1-SNAPSHOT"
 
 [plugins]
 indra = { id = "net.kyori.indra", version.ref = "indra" }
 
 [libraries]
 cloud-core = { group = "org.incendo", name = "cloud-core", version.ref = "cloud" }
+
+# Minecraft
 cloud-minecraft-extras = { group = "org.incendo", name = "cloud-minecraft-extras", version.ref = "cloudMinecraft" }
+cloud-minecraft-paper = { group = "org.incendo", name = "cloud-paper", version.ref = "cloudMinecraft" }
+paper = { group = "io.papermc.paper", name = "paper-api", version.ref = "paper" }
+
+# Processors
+cloud-processors-cooldown = { group = "org.incendo", name = "cloud-processors-cooldown", version.ref = "cloudProcessors" }
