chore: add code/.gradle to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -400,3 +400,6 @@ poetry.toml
 pyrightconfig.json
 
 # End of https://www.toptal.com/developers/gitignore/api/python,intellij+all,node
+
+# Project specific
+code/.gradle
