--- a/code/gradle/libs.versions.toml
+++ b/code/gradle/libs.versions.toml
@@ -2,7 +2,7 @@
 indra = "3.1.3"
 
 cloud = "2.0.0-rc.2"
-cloudMinecraft = "2.0.0-beta.8"
+cloudMinecraft = "2.0.0-SNAPSHOT"
 cloudProcessors = "1.0.0-beta.3"
 
 paper = "1.20.6-R0.1-SNAPSHOT"
